tests/ui/lint/snapshots/equal_operands_bitor.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Equal operands
   ╭─[test.lis:4:11]
 3 │   let x = 5
 4 │   let _ = x | x
   ·           ──┬──
   ·             ╰── identical operands
 5 │ }
   ╰────
  help: Both operands are identical so the result is that operand. Did you mean to use different operands? · code: [lint.equal_operands]
