tests/ui/lint/snapshots/equal_operands_division.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Equal operands
   ╭─[test.lis:4:11]
 3 │   let x = 5
 4 │   let _ = x / x
   ·           ──┬──
   ·             ╰── identical operands
 5 │ }
   ╰────
  help: Both operands are identical so the result is always `1`, unless the operand is `0`, which panics. Did you mean to use different operands? · code: [lint.equal_operands]
