tests/ui/lint/snapshots/equal_operands_uintptr_bitand.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Equal operands
   ╭─[test.lis:4:11]
 3 │   let p: uintptr = 5 as uintptr
 4 │   let _ = p & p
   ·           ──┬──
   ·             ╰── identical operands
 5 │ }
   ╰────
  help: Both operands are identical so the result is that operand. Did you mean to use different operands? · code: [lint.equal_operands]
